# pandoc-builder-monadic

./: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  pandoc-builder-monadic.cabal
.github/workflows/: haskell-ci.yml
src/Text/Pandoc/Builder/: Monadic.hs
src/Text/Pandoc/Builder/Monadic/: Internal.hs  Utils.hs  Veneer.hs  Verbatim.hs
