cabal-version:   2.2
name:            pandoc-builder-monadic
version:         0.1.0
homepage:        https://github.com/414owen/pandoc-builder-monadic
license:         BSD-3-Clause
license-file:    LICENSE
author:          Owen Shepherd
maintainer:      owen@owen.cafe
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Text.Pandoc.Builder.Monadic
    other-modules:    Text.Pandoc.Builder.Monadic.Internal
    build-depends:    base ^>=4.17.2.0
                    , containers
                    , dlist ^>= 1.0
                    , mtl
                    , pandoc-types >= 1.23
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
