cabal-version:   2.2
name:            pandoc-builder-monadic
version:         0.1.0
homepage:        https://github.com/414owen/pandoc-builder-monadic
license:         BSD-3-Clause
license-file:    LICENSE
author:          Owen Shepherd
maintainer:      owen@owen.cafe
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==9.6.2, GHC==9.4.5, GHC==9.2.8, GHC==8.0.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Text.Pandoc.Builder.Monadic
                    , Text.Pandoc.Builder.Monadic.Veneer
                    , Text.Pandoc.Builder.Monadic.Verbatim
                    , Text.Pandoc.Builder.Monadic.Utils
                    , Text.Pandoc.Builder.Monadic.Internal
    build-depends:    base >=4.9.2.0 && < 5
                    , containers
                    , dlist ^>= 1.0
                    , mtl
                    , pandoc-types >= 1.21 && < 2
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
