cabal-version:   2.2
name:            pandoc-builder-monadic
version:         0.1.0
synopsis:        A monadic DSL for building pandoc documents
homepage:        https://github.com/414owen/pandoc-builder-monadic
license:         BSD-3-Clause
license-file:    LICENSE
author:          Owen Shepherd
maintainer:      owen@owen.cafe
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==9.6.2, GHC==9.4.5, GHC==9.2.8, GHC==8.0.2

common warnings
    ghc-options: -Wall -Wextra -Wunused-packages

library
    import:           warnings
    exposed-modules:  Text.Pandoc.Builder.Monadic
                    , Text.Pandoc.Builder.Monadic.Veneer
                    , Text.Pandoc.Builder.Monadic.Verbatim
                    , Text.Pandoc.Builder.Monadic.Utils
                    , Text.Pandoc.Builder.Monadic.Internal
    build-depends:    base >=4.9.0.0 && <5
                    , dlist >=0.2 && <2
                    , mtl >=1.1.0.0 && <3
                    , pandoc-types >= 1.21 && < 2
                    , text >=0.2 && <3
    hs-source-dirs:   src
    default-language: Haskell2010
